unpackaged/main/default/objects/FSL_Glympse_Brand_Mapping__c/FSL_Glympse_Brand_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>FSL Glympse Brand Mapping</label>
</CustomObject>