unpackaged/main/default/objects/FSL_Glympse_Brand_Mapping__c/fields/Brand_Code__c.field-meta.xml
<CustomField>
    <fullName>Brand_Code__c</fullName>
    <label>Brand Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>