unpackaged/main/default/objects/FSL_Glympse_Brand_Mapping__c/fields/Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name__c</fullName>
    <label>Brand Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>