unpackaged/main/default/objects/FSL_Glympse_Brand_Mapping__c/fields/FSL_Membership_Program__c.field-meta.xml
<CustomField>
    <fullName>FSL_Membership_Program__c</fullName>
    <label>FSL Membership Program</label>
    <length>25</length>
    <type>Text</type>
</CustomField>