unpackaged/main/default/objects/FSL_Glympse_Brand_Mapping__c/fields/FSL_Membership_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>FSL_Membership_Sponsor__c</fullName>
    <label>FSL Membership Sponsor</label>
    <length>44</length>
    <type>Text</type>
</CustomField>